--- a/scss/style.scss
+++ b/scss/style.scss
@@ -74,11 +74,18 @@ body{
             text-align: center;
             & p{
                 font-size: 2em;
+                
             }
             & h1{
                 font-size: 4.5em;
                 font-family: 'Bree Serif', serif;
             }
+            &__welcome{
+                font-weight: bold;
+                text-decoration: underline;
+                font-style:normal;
+            }
+            
         }
         &__subTitle{
             margin: .4em 0;
