--- a/css/style.css
+++ b/css/style.css
@@ -23,14 +23,20 @@ html {
 }
 
 /* ---------------NAV------------------- */
+header.abajo {
+  padding: 0.6em 0.3em;
+  background-color: #e08f15;
+}
+
 .header {
   position: sticky;
   padding: 0.3em;
   top: 0;
   z-index: 30;
-  background-color: #e08f15;
+  background-color: #4D5050;
   font-size: 16px;
   margin: 0;
+  transition: 0.5s ease all;
 }
 .header__nav {
   padding: 0 2em;
@@ -163,6 +169,7 @@ html {
 }
 .aboutMe__skills__container__logo img {
   width: 100%;
+  height: auto;
   transition: 1.7s ease all;
 }
 .aboutMe__skills__container__logo img:hover {
