--- a/scss/style.scss
+++ b/scss/style.scss
@@ -64,6 +64,7 @@ html{
 }
 .max-width{
     padding: 0 80px;
+    margin: 0;
 }
 /* ---------------NAV------------------- */
 .header{
@@ -223,8 +224,6 @@ html{
             }
         }
     }
-    
-    
 }
 
 /* ---------------END ABOUT ME-------------------- */
@@ -233,7 +232,6 @@ html{
     text-align: center;
     padding-top: 3em ;
     color: #FFF;
-
 }
 .projects{
     font-size: 16px;
@@ -255,6 +253,31 @@ html{
             align-items: center;
             justify-content: center;
             padding: 1em;
+            &__title{
+                font-size: 2em;
+                font-family: 'Ubuntu', sans-serif;
+                margin-top: 1em;
+            }
+            &__comment{
+                font-family: 'Nanum Gothic', sans-serif;
+                font-style: oblique;
+                font-size: 1.1em;
+                text-align:center;
+            }
+            &__button{
+                text-decoration: none;
+                font-family: 'Ubuntu', sans-serif;
+                color: #ffa724;
+                font-size: 1.2em;
+                padding: .3em 2.5em;
+                border: 2px solid #e08f15;
+                border-radius: 20px;
+                transition: .5s ease all;
+                &:hover{
+                    color: #FFF;
+                    background-color: #e08f15;
+                }
+            }
         }
     }
 }
@@ -341,6 +364,18 @@ html{
             }
             }
             
+        }
+    }
+    .projects{
+        font-size: 14px;
+        &__item{
+            margin: 0;
+            &__image{
+                background-position:bottom;
+                height: 18em;
+                padding: 0;
+    
+            }
         }
     }
     .footer{
