--- a/scss/style.scss
+++ b/scss/style.scss
@@ -80,6 +80,16 @@ html{
     }
     &__nav{
         padding: .3em 2em;
+        &__title{
+            text-decoration: none;
+            font-family: 'Ubuntu',sans-serif;
+            color: #fff;
+            font-weight: 500;
+            font-size: 1.7em;
+            &:hover{
+                color: #FFF;
+            }
+        }
         &__button{
             margin-left: auto;
             &:focus{
@@ -264,20 +274,26 @@ html{
                 font-size: 1.1em;
                 text-align:center;
             }
-            &__button{
-                text-decoration: none;
-                font-family: 'Ubuntu', sans-serif;
-                color: #ffa724;
-                font-size: 1.2em;
-                padding: .3em 2.5em;
-                border: 2px solid #e08f15;
-                border-radius: 20px;
-                transition: .5s ease all;
-                &:hover{
-                    color: #FFF;
-                    background-color: #e08f15;
+            &__container{
+                display: flex;
+                width: 100%;
+                justify-content: space-evenly;
+                &__button{
+                    text-decoration: none;
+                    font-family: 'Ubuntu', sans-serif;
+                    color: #ffa724;
+                    font-size: 1.2em;
+                    padding: .3em 2.5em;
+                    border: 2px solid #e08f15;
+                    border-radius: 20px;
+                    transition: .5s ease all;
+                    &:hover{
+                        color: #FFF;
+                        background-color: #e08f15;
+                    }
                 }
             }
+            
         }
     }
 }
