solucion al problema de Welcome

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -66,6 +66,9 @@ html{
     padding: 0 80px;
     margin: 0;
 }
+#welcome{
+    display: none;
+}
 /* ---------------NAV------------------- */
 .header{
     position: sticky;
