--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,10 @@ html {
   margin: 0;
 }
 
+#welcome {
+  display: none;
+}
+
 /* ---------------NAV------------------- */
 .header {
   position: sticky;
