--- a/scss/style.scss
+++ b/scss/style.scss
@@ -191,13 +191,14 @@ html{
     margin: 0 auto;
     color: #FFF;
     &__title{
-        font-size: 2em;
+        font-size: 1.8em;
         font-family: 'Ubuntu', sans-serif;
         text-align: center;
         margin-top: 1em;
     }
     &__text{
-        font-family: 'Nanum Gothic', sans-serif;
+        font-family: 'Nanum Gothic', sans-serif;           
+        text-align: center;
         font-style: oblique;
         font-size: 1.3em;
         text-align:justify;
