--- a/scss/style.scss
+++ b/scss/style.scss
@@ -257,14 +257,20 @@ html{
         &__image{
             
             height: 22em;
-            &.primero{
-                background: url(../asetts/portfolio.png);
+            &.portfolio{
+                background: url('../asetts/portfolio.png');
                 background-size: contain;
                 background-position: center;
                 background-repeat: no-repeat;
             }
-            &.segundo{
-                background: url(../asetts/simonDice.jpeg);
+            &.simonDice{
+                background: url('../asetts/simonDice.jpeg');
+                background-size: contain;
+                background-position: center;
+                background-repeat: no-repeat;
+            }
+            &.utilitiesApp{
+                background: url('../asetts/utilitiesApp.png');
                 background-size: contain;
                 background-position: center;
                 background-repeat: no-repeat;
@@ -276,7 +282,7 @@ html{
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            padding: 1em;
+            padding: 1em 2em;
             &__title{
                 font-size: 2em;
                 font-family: 'Ubuntu', sans-serif;
@@ -405,6 +411,9 @@ html{
                 height: 18em;
                 padding: 0;
     
+            }
+            &__description{
+                padding: 1em;
             }
         }
     }
