added Sportshop project

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -257,8 +257,8 @@ html{
         &__image{
             
             height: 22em;
-            &.portfolio{
-                background: url('../asetts/portfolio.png');
+            &.sportshop{
+                background: url('../asetts/sportshop.png');
                 background-size: contain;
                 background-position: center;
                 background-repeat: no-repeat;
