--- a/css/style.css
+++ b/css/style.css
@@ -270,8 +270,8 @@ html {
 .projects__item__image {
   height: 22em;
 }
-.projects__item__image.portfolio {
-  background: url("../asetts/portfolio.png");
+.projects__item__image.sportshop {
+  background: url("../asetts/sportshop.png");
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
